force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Sample/Project/Application</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample/Project/Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>