force-app/main/default/objects/Project__c/fields/Acc_Email__c.field-meta.xml
<CustomField>
    <fullName>Acc_Email__c</fullName>
    <formula>Account__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Email</label>
    <type>Text</type>
</CustomField>