force-app/main/default/objects/Project__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <label>Account Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>