force-app/main/default/objects/Project__c/fields/Acidity__c.field-meta.xml
<CustomField>
    <fullName>Acidity__c</fullName>
    <label>Acidity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>