force-app/main/default/objects/Project__c/fields/Actual_Date_of_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_of_Dispatch__c</fullName>
    <label>Actual Date of Dispatch</label>
    <type>Date</type>
</CustomField>