force-app/main/default/objects/Project__c/fields/Additive_Status__c.field-meta.xml
<CustomField>
    <fullName>Additive_Status__c</fullName>
    <label>Additive Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>