force-app/main/default/objects/Project__c/fields/Airport_Of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Airport_Of_Departure__c</fullName>
    <label>Airport Of Departure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delhi NCR</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>Dabolim</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Guwahati</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Srinagar</fullName>
            </value>
            <value>
                <fullName>Patna</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Thiruvananthapuram</fullName>
            </value>
            <value>
                <fullName>Kozhikode</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Siliguri</fullName>
            </value>
            <value>
                <fullName>Varanasi</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
            <value>
                <fullName>Ranchi</fullName>
            </value>
            <value>
                <fullName>Raipur</fullName>
            </value>
            <value>
                <fullName>Mangalore</fullName>
            </value>
            <value>
                <fullName>Dehradun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>