force-app/main/default/objects/Project__c/fields/Allergen__c.field-meta.xml
<CustomField>
    <fullName>Allergen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allergen</label>
    <type>Checkbox</type>
</CustomField>