force-app/main/default/objects/Project__c/fields/Allergin_Free_Decleration__c.field-meta.xml
<CustomField>
    <fullName>Allergin_Free_Decleration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allergin Free Decleration</label>
    <type>Checkbox</type>
</CustomField>