force-app/main/default/objects/Project__c/fields/Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Value__c</fullName>
    <label>Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>