force-app/main/default/objects/Project__c/fields/Annual_Volume_Full__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume_Full__c</fullName>
    <formula>Opportunity__r.Annual_Volume_Full__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Volume - Full</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>