force-app/main/default/objects/Project__c/fields/Annual_Volume_in_units__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume_in_units__c</fullName>
    <formula>TEXT(Opportunity__r.Annual_Volume_in_units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Volume (in units)</label>
    <type>Text</type>
</CustomField>