force-app/main/default/objects/Project__c/fields/Application_guidelines_if_any__c.field-meta.xml
<CustomField>
    <fullName>Application_guidelines_if_any__c</fullName>
    <label>Application guidelines(if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>