force-app/main/default/objects/Project__c/fields/Application_method__c.field-meta.xml
<CustomField>
    <fullName>Application_method__c</fullName>
    <label>Application method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>dust on</fullName>
            </value>
            <value>
                <fullName>slury</fullName>
            </value>
            <value>
                <fullName>cooking</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Confectionery</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>