force-app/main/default/objects/Project__c/fields/Application_product_shelf_life__c.field-meta.xml
<CustomField>
    <fullName>Application_product_shelf_life__c</fullName>
    <label>Application product shelf life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>