force-app/main/default/objects/Project__c/fields/Application_Ready__c.field-meta.xml
<CustomField>
    <fullName>Application_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Ready?</label>
    <type>Checkbox</type>
</CustomField>