force-app/main/default/objects/Project__c/fields/Application_reciepe_code__c.field-meta.xml
<CustomField>
    <fullName>Application_reciepe_code__c</fullName>
    <label>Application reciepe code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>