force-app/main/default/objects/Project__c/fields/Application_Samples_Receipe_Support__c.field-meta.xml
<CustomField>
    <fullName>Application_Samples_Receipe_Support__c</fullName>
    <label>Application Samples / Receipe/ Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>