force-app/main/default/objects/Project__c/fields/Application_Trails__c.field-meta.xml
<CustomField>
    <fullName>Application_Trails__c</fullName>
    <label>Application Trails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>