force-app/main/default/objects/Project__c/fields/Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment__c</fullName>
    <label>Approval Comment</label>
    <type>TextArea</type>
</CustomField>