force-app/main/default/objects/Project__c/fields/Auto_Submit_Sample__c.field-meta.xml
<CustomField>
    <fullName>Auto_Submit_Sample__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Submit Sample</label>
    <type>Checkbox</type>
</CustomField>