force-app/main/default/objects/Project__c/fields/AWB_NO__c.field-meta.xml
<CustomField>
    <fullName>AWB_NO__c</fullName>
    <label>AWB.NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>