force-app/main/default/objects/Project__c/fields/Billing_Shipping_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Shipping_Telephone__c</fullName>
    <formula>IF(Customers_Contact__r.Phone != null,  Customers_Contact__r.Phone,  Account__r.Phone)</formula>
    <label>Billing / Shipping Telephone</label>
    <type>Text</type>
</CustomField>