force-app/main/default/objects/Project__c/fields/Billing_StateCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_StateCode__c</fullName>
    <formula>IF(Opportunity__r.Account_Billing_Address__c, TEXT(Opportunity__r.Account.BillingStateCode) ,  TEXT(Opportunity__r.Customer_Billing_Address__r.Address__StateCode__s))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing StateCode</label>
    <type>Text</type>
</CustomField>