force-app/main/default/objects/Project__c/fields/Billling_PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>Billling_PAN_Number__c</fullName>
    <formula>IF(Opportunity__r.Account_Billing_Address__c, Opportunity__r.Account.PAN_Number__c , Opportunity__r.Customer_Billing_Address__r.PAN_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billling PAN Number</label>
    <type>Text</type>
</CustomField>