force-app/main/default/objects/Project__c/fields/Brix_degrees__c.field-meta.xml
<CustomField>
    <fullName>Brix_degrees__c</fullName>
    <label>Brix (degrees)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>