force-app/main/default/objects/Project__c/fields/Business_potential_value_INR__c.field-meta.xml
<CustomField>
    <fullName>Business_potential_value_INR__c</fullName>
    <inlineHelpText>Business expected from this enquiry / customer for sampling initiated</inlineHelpText>
    <label>Business potential value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>