force-app/main/default/objects/Project__c/fields/Business_potential_value_INR_New__c.field-meta.xml
<CustomField>
    <fullName>Business_potential_value_INR_New__c</fullName>
    <formula>Target_Price__c * Annual_Volume_Full__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business potential value (INR) New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>