force-app/main/default/objects/Project__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>$User.Division</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>