force-app/main/default/objects/Project__c/fields/Category_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Category_Buyer__c</fullName>
    <label>Category Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>