force-app/main/default/objects/Project__c/fields/Category_description_as_per_FSSAI__c.field-meta.xml
<CustomField>
    <fullName>Category_description_as_per_FSSAI__c</fullName>
    <label>Category description as per FSSAI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>