force-app/main/default/objects/Project__c/fields/Center_filling_Cream__c.field-meta.xml
<CustomField>
    <fullName>Center_filling_Cream__c</fullName>
    <label>Center filling/ Cream %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>