force-app/main/default/objects/Project__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Shipping City</label>
    <length>125</length>
    <type>Text</type>
</CustomField>