force-app/main/default/objects/Project__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>IF( OR(  AND(NOT(ISBLANK(Account__c)) ,  NOT(ISBLANK(Lead__c)) ) ,  AND(NOT(ISBLANK(Account__c)) ,  ISBLANK(Lead__c)) ) , Account__r.Name ,  Lead__r.Company )</formula>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>