force-app/main/default/objects/Project__c/fields/Confectionary_Type__c.field-meta.xml
<CustomField>
    <fullName>Confectionary_Type__c</fullName>
    <label>Confectionary Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>