force-app/main/default/objects/Project__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <formula>IF( NOT(ISBLANK(Customers_Contact__c)), Customers_Contact__r.MobilePhone, IF( OR( AND(NOT(ISBLANK(Account__c)) , NOT(ISBLANK(Lead__c)) ) , AND(NOT(ISBLANK(Account__c)) , ISBLANK(Lead__c)) ) ,  Account__r.Phone  , Lead__r.MobilePhone) )</formula>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>