force-app/main/default/objects/Project__c/fields/Cost_in_use__c.field-meta.xml
<CustomField>
    <fullName>Cost_in_use__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost in use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>