force-app/main/default/objects/Project__c/fields/Cost_in_Use_target__c.field-meta.xml
<CustomField>
    <fullName>Cost_in_Use_target__c</fullName>
    <label>Cost in Use target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>