force-app/main/default/objects/Project__c/fields/Country_of_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country of Compliance</label>
    <type>Checkbox</type>
</CustomField>