force-app/main/default/objects/Project__c/fields/Country_Regulation__c.field-meta.xml
<CustomField>
    <fullName>Country_Regulation__c</fullName>
    <label>Country Regulation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Country_Picklist</valueSetName>
    </valueSet>
</CustomField>