force-app/main/default/objects/Project__c/fields/Current_Cost__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost__c</fullName>
    <label>Current Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>