force-app/main/default/objects/Project__c/fields/Current_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Current_Packaging__c</fullName>
    <label>Current Packaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>