force-app/main/default/objects/Project__c/fields/Current_RM_FG_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_RM_FG_Code__c</fullName>
    <label>Current RM/FG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>