force-app/main/default/objects/Project__c/fields/Current_Shelf_life__c.field-meta.xml
<CustomField>
    <fullName>Current_Shelf_life__c</fullName>
    <label>Current Shelf life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>