force-app/main/default/objects/Project__c/fields/Current_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier_Name__c</fullName>
    <label>Current Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>