force-app/main/default/objects/Project__c/fields/Customer_Base_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Base_Details__c</fullName>
    <label>Customer Base Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>