force-app/main/default/objects/Project__c/fields/Customer_Brand_details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Brand_details__c</fullName>
    <label>Customer Brand details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>