force-app/main/default/objects/Project__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <inlineHelpText>Customer feedback</inlineHelpText>
    <label>Customer Comments</label>
    <type>TextArea</type>
</CustomField>