force-app/main/default/objects/Project__c/fields/Customer_Cost_in_USE_CIU__c.field-meta.xml
<CustomField>
    <fullName>Customer_Cost_in_USE_CIU__c</fullName>
    <label>Customer Cost in USE ( CIU)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>