force-app/main/default/objects/Project__c/fields/Customer_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Launch_Date__c</fullName>
    <inlineHelpText>When is customer likely to launch the targeted product in market?</inlineHelpText>
    <label>Customer Launch Date</label>
    <type>Date</type>
</CustomField>