force-app/main/default/objects/Project__c/fields/Customer_Target_price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Target_price__c</fullName>
    <label>Customer Target price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>