force-app/main/default/objects/Project__c/fields/Customers_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customers_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Chosen primary contact will be displayed here
Else choose the contact to whom the item needs to be dispatched.</inlineHelpText>
    <label>Customer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sample/Project/Applications</relationshipLabel>
    <relationshipName>Sample_Project_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>