force-app/main/default/objects/Project__c/fields/Dispatch_Details__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Details__c</fullName>
    <label>Dispatch Details</label>
    <type>TextArea</type>
</CustomField>