force-app/main/default/objects/Project__c/fields/Distributer_Customer__c.field-meta.xml
<CustomField>
    <fullName>Distributer_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributer Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample/Project/Applications (Distributer Customer)</relationshipLabel>
    <relationshipName>Sample_Project_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>