force-app/main/default/objects/Project__c/fields/Documentation_Support__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Support</label>
    <type>Checkbox</type>
</CustomField>