force-app/main/default/objects/Project__c/fields/Dosage_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Guidelines__c</fullName>
    <label>Dosage Guidelines</label>
    <type>TextArea</type>
</CustomField>