force-app/main/default/objects/Project__c/fields/Dosage_guidelines_by_customer__c.field-meta.xml
<CustomField>
    <fullName>Dosage_guidelines_by_customer__c</fullName>
    <label>Dosage guidelines by customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>