force-app/main/default/objects/Project__c/fields/End_Application_Category__c.field-meta.xml
<CustomField>
    <fullName>End_Application_Category__c</fullName>
    <label>End Application Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>