force-app/main/default/objects/Project__c/fields/End_use_application_other__c.field-meta.xml
<CustomField>
    <fullName>End_use_application_other__c</fullName>
    <inlineHelpText>To be entered only if end use category or application is &apos;others&apos;</inlineHelpText>
    <label>End use application other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>