force-app/main/default/objects/Project__c/fields/End_Use_Applications__c.field-meta.xml
<CustomField>
    <fullName>End_Use_Applications__c</fullName>
    <label>End Use Applications</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>End_Use_category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potato Chips</fullName>
            </value>
            <value>
                <fullName>Finger/Extruded Snacks</fullName>
            </value>
            <value>
                <fullName>Pellets/Fryums</fullName>
            </value>
            <value>
                <fullName>Puffed Snacks</fullName>
            </value>
            <value>
                <fullName>Tortilla Chips</fullName>
            </value>
            <value>
                <fullName>Namkeens and Other traditional</fullName>
            </value>
            <value>
                <fullName>Popcorn</fullName>
            </value>
            <value>
                <fullName>Nuts, Seeds and Trail Mixes</fullName>
            </value>
            <value>
                <fullName>White Noodles</fullName>
            </value>
            <value>
                <fullName>Brown Noodles</fullName>
            </value>
            <value>
                <fullName>Atta/Oats/Multigrain Noodles</fullName>
            </value>
            <value>
                <fullName>Pasta</fullName>
            </value>
            <value>
                <fullName>Oats-based</fullName>
            </value>
            <value>
                <fullName>Millets-based</fullName>
            </value>
            <value>
                <fullName>Grain-based</fullName>
            </value>
            <value>
                <fullName>Instant</fullName>
            </value>
            <value>
                <fullName>Cook-up</fullName>
            </value>
            <value>
                <fullName>RTD</fullName>
            </value>
            <value>
                <fullName>Biscuits and Cookies</fullName>
            </value>
            <value>
                <fullName>Crackers</fullName>
            </value>
            <value>
                <fullName>Bread and Bread Products</fullName>
            </value>
            <value>
                <fullName>Cakes and Pastries</fullName>
            </value>
            <value>
                <fullName>Wafers</fullName>
            </value>
            <value>
                <fullName>Creams and fills</fullName>
            </value>
            <value>
                <fullName>Candies and Lollipop</fullName>
            </value>
            <value>
                <fullName>Medicated Confectionery (Lozenges)</fullName>
            </value>
            <value>
                <fullName>Mints</fullName>
            </value>
            <value>
                <fullName>Toffees, Caramels and Noughat</fullName>
            </value>
            <value>
                <fullName>Pastilles, Jellies and Chews</fullName>
            </value>
            <value>
                <fullName>Gums</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>