force-app/main/default/objects/Project__c/fields/End_Use_category__c.field-meta.xml
<CustomField>
    <fullName>End_Use_category__c</fullName>
    <inlineHelpText>Choose end use category and the end use application will be based on category opted.</inlineHelpText>
    <label>End Use category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Baked Goods</fullName>
            </value>
            <value>
                <fullName>Breakfast Cereals</fullName>
            </value>
            <value>
                <fullName>Chilled and Frozen Foods</fullName>
            </value>
            <value>
                <fullName>Confectionery</fullName>
            </value>
            <value>
                <fullName>Dairy and Alternatives</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Noodles and Pasta</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Soups</fullName>
            </value>
            <value>
                <fullName>Sauces and Meals</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Bakery</fullName>
                <isActive>false</isActive>
                <label>Bakery</label>
            </value>
            <value>
                <fullName>Beverage</fullName>
                <isActive>false</isActive>
                <label>Beverage</label>
            </value>
            <value>
                <fullName>Dairy</fullName>
                <isActive>false</isActive>
                <label>Dairy</label>
            </value>
            <value>
                <fullName>Oral Care</fullName>
                <isActive>false</isActive>
                <label>Oral Care</label>
            </value>
            <value>
                <fullName>Pharma</fullName>
                <isActive>false</isActive>
                <label>Pharma</label>
            </value>
            <value>
                <fullName>Savoury</fullName>
                <isActive>false</isActive>
                <label>Savoury</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>