force-app/main/default/objects/Project__c/fields/Error_Message_On_Submitting_To_Optiva__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_On_Submitting_To_Optiva__c</fullName>
    <label>Error Message On Submit To SAP/Optiva</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>