force-app/main/default/objects/Project__c/fields/Error_Occured_On_Submitting_To_Optiva__c.field-meta.xml
<CustomField>
    <fullName>Error_Occured_On_Submitting_To_Optiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Occured On Submitting To Optiva</label>
    <type>Checkbox</type>
</CustomField>