force-app/main/default/objects/Project__c/fields/Expected_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Value__c</fullName>
    <inlineHelpText>On winning this project, what is the approx annual revenue expected for the developed product?</inlineHelpText>
    <label>Expected Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>