force-app/main/default/objects/Project__c/fields/Expected_Volume_Unit__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volume_Unit__c</fullName>
    <label>Expected Volume Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Ltr</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
                <isActive>false</isActive>
                <label>GM</label>
            </value>
            <value>
                <fullName>MG</fullName>
                <isActive>false</isActive>
                <label>MG</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <isActive>false</isActive>
                <label>MT</label>
            </value>
            <value>
                <fullName>TONNE</fullName>
                <isActive>false</isActive>
                <label>TONNE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>