force-app/main/default/objects/Project__c/fields/Export__c.field-meta.xml
<CustomField>
    <fullName>Export__c</fullName>
    <label>Export</label>
    <length>255</length>
    <type>Text</type>
</CustomField>