force-app/main/default/objects/Project__c/fields/Final_Fat__c.field-meta.xml
<CustomField>
    <fullName>Final_Fat__c</fullName>
    <label>Final Fat %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>