force-app/main/default/objects/Project__c/fields/Final_SNF__c.field-meta.xml
<CustomField>
    <fullName>Final_SNF__c</fullName>
    <label>Final SNF %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>